[gd_scene load_steps=9 format=2]

[ext_resource path="res://Ship.tscn" type="PackedScene" id=1]
[ext_resource path="res://Fuel.tscn" type="PackedScene" id=2]
[ext_resource path="res://Fuel.gd" type="Script" id=3]
[ext_resource path="res://Level.gd" type="Script" id=4]
[ext_resource path="res://Platform.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/level1.png" type="Texture" id=6]
[ext_resource path="res://assets/DejaVuSans-Bold-70.res" type="DynamicFont" id=7]
[ext_resource path="res://Pause.tscn" type="PackedScene" id=8]

[node name="World" type="Node2D"]

[node name="Ship" parent="." instance=ExtResource( 1 )]
editor/display_folded = true
mode = 0

[node name="Camera2D" type="Camera2D" parent="Ship"]
current = true

[node name="CanvasLayer" type="CanvasLayer" parent="Ship/Camera2D"]

[node name="Control" type="Control" parent="Ship/Camera2D/CanvasLayer"]
margin_right = 40.0
margin_bottom = 40.0

[node name="FuelBar" parent="Ship/Camera2D/CanvasLayer/Control" instance=ExtResource( 2 )]
margin_left = -10.0
margin_top = 20.0
margin_right = 1690.0
margin_bottom = 598.0
rect_scale = Vector2( 0.1, 0.1 )
script = ExtResource( 3 )

[node name="LevelGenerator" type="Node2D" parent="."]

[node name="Level" type="StaticBody2D" parent="LevelGenerator"]
position = Vector2( 100, 0 )
z_index = -1
script = ExtResource( 4 )

[node name="BeginPlatform" parent="LevelGenerator/Level" instance=ExtResource( 5 )]
position = Vector2( -1875, 770 )

[node name="EndPlatform" parent="LevelGenerator/Level" instance=ExtResource( 5 )]
position = Vector2( -400, -180 )

[node name="Sprite" type="Sprite" parent="LevelGenerator/Level"]
z_index = -1
texture = ExtResource( 6 )

[node name="Level1" type="CollisionPolygon2D" parent="LevelGenerator/Level"]
visible = false
position = Vector2( 300, 0 )
build_mode = 1
polygon = PoolVector2Array( -1959.11, 158.746, -1935.07, 147.156, -1928.42, 143.722, -1924.77, 138.785, -1915.32, 133.204, -1908.03, 131.702, -1904.16, 127.195, -1903.52, 120.97, -1891.28, 108.521, -1879.56, 100.432, -1872.39, 89.9716, -1864.26, 79.1238, -1855.34, 66.92, -1848.37, 56.2659, -1848.18, 53.1665, -1841.2, 47.1615, -1839.85, 36.7658, -1829.19, 26.6928, -1829.19, 23.0123, -1823.19, 20.4941, -1820.09, 16.4262, -1819.51, 11.7771, -1812.92, 1.3167, -1761.2, 0.929279, -1748.42, -4.30092, -1730.79, -5.07576, -1725.55, -7.48246, -1719.54, -7.67617, -1714.31, -10.1944, -1708.31, -10.9693, -1697.46, -19.6863, -1693.2, -19.88, -1688.74, -23.3668, -1677.12, -34.0209, -1673.63, -36.9265, -1663.37, -44.0939, -1654.07, -50.0989, -1647.87, -58.6222, -1643.2, -59.4497, -1621.51, -79.5957, -1621.89, -83.4699, -1615.5, -88.8938, -1614.73, -92.9617, -1604.27, -102.26, -1604.27, -106.134, -1600.59, -112.527, -1586.25, -112.914, -1575.4, -107.103, -1566.49, -105.359, -1555.84, -100.323, -1524.26, -100.904, -1518.45, -104.003, -1510.51, -103.81, -1505.09, -109.233, -1492.11, -110.008, -1487.07, -104.972, -1481.84, -102.26, -1476.82, -97.0989, -1469.06, -91.7995, -1464.11, -91.4173, -1458.43, -85.871, -1436.06, -86.0063, -1427.4, -89.2529, -1420.77, -94.7992, -1415.49, -94.7992, -1411.57, -97.7753, -1314.44, -97.5047, -1307.3, -102.916, -1301.21, -106.433, -1283.62, -107.245, -1279.02, -104.404, -1274.56, -103.863, -1262.79, -97.64, -1257.65, -97.0989, -1242.5, -89.3882, -1207.73, -88.8471, -1194.91, -97.7753, -1189.63, -98.5869, -1185.98, -101.022, -1175.16, -101.157, -1168.93, -97.5047, -1166.36, -97.9106, -1151.62, -88.7118, -1133.22, -88.5765, -1119.56, -91.282, -1112.66, -91.5526, -1109.28, -94.3934, -1102.92, -94.7992, -1100.48, -97.0989, -1091.01, -100.481, -1083.71, -100.751, -1079.28, -102.51, -1075.89, -106.298, -1063.45, -112.791, -999.081, -113.009, -988.688, -107.135, -975.132, -101.713, -964.513, -92.6753, -942.371, -88.6085, -888.147, -89.0604, -879.98, -86.3492, -866.876, -73.2449, -864.843, -64.6594, -855.805, -56.7517, -851.061, -47.4883, -831.404, -29.4135, -759.331, -28.7357, -755.942, -25.7986, -744.193, -24.8948, -729.898, -17.7353, -705.413, -1.90803, -701.355, -2.04331, -689.586, 4.17937, -685.122, 4.17937, -665.642, 15.8131, -636.665, 16.4895, -622.326, 13.5134, -560.234, 13.3781, -550.359, 16.0836, -527.938, 33.886, -512.849, 42.654, -483.763, 43.0019, -472.763, 39.443, -420.027, 40.0901, -411.291, 46.5607, -402.88, 46.8843, -361.499, 72.8498, -349.525, 73.5276, -342.295, 76.4648, -333.709, 75.787, -324.22, 79.6279, -306.371, 78.9501, -291.911, 82.3391, -279.485, 88.2134, -271.125, 88.8912, -264.799, 94.3136, -251.243, 96.7989, -237.417, 105.384, -229.283, 106.288, -214.455, 112.018, -205.493, 114.528, -192.946, 123.49, -180.758, 136.395, -172.821, 153.589, -168.615, 157.471, -167.445, 161.884, -163.439, 164.589, -166.448, 171.849, -165.95, 177.164, -162.13, 183.475, -155.819, 187.959, -150.504, 193.108, -148.013, 192.942, -144.691, 196.098, -141.868, 196.098, -135.058, 200.416, -127.585, 202.741, -104.333, 202.575, -97.8559, 205.73, -82.244, 206.063, -71.6147, 214.367, -56.8946, 214.367, -47.9261, 217.356, -31.1517, 217.688, -23.3458, 219.681, -17.3669, 223.667, -7.23578, 223.335, -3.41589, 226.491, 16.5141, 225.993, 24.6522, 229.48, 31.7938, 237.951, 37.7791, 238.997, 43.7581, 243.647, 55.3839, 247.799, 70.4974, 261.418, 80.6285, 263.577, 86.1093, 268.061, 93.583, 270.552, 98.2333, 271.217, 101.721, 273.874, 233.211, 274.704, 239.047, 277.86, 246.853, 278.857, 252.002, 283.175, 257.815, 283.341, 268.776, 289.32, 348.354, 289.32, 354.997, 292.475, 405.798, 292.735, 422.904, 301.372, 433.035, 301.04, 438.184, 303.863, 454.46, 307.849, 490.5, 307.849, 508.942, 304.527, 671.039, 304.693, 681.773, 308.015, 696.554, 307.517, 700.208, 309.842, 703.862, 312.831, 716.982, 316.651, 734.255, 316.485, 744.884, 319.807, 760.994, 319.475, 764.814, 322.132, 816.198, 322.464, 830.481, 331.267, 838.287, 334.422, 845.429, 334.422, 848.917, 337.246, 926.681, 337.91, 933.568, 338.79, 939.048, 343.607, 955.823, 343.44, 965.788, 346.762, 1000.17, 346.596, 1007.81, 343.108, 1015.28, 346.762, 1023.25, 347.426, 1044.51, 369.183, 1051.15, 382.138, 1051.82, 409.458, 1048.66, 428.558, 1048.89, 461.316, 1044.51, 467.919, 1042.85, 475.891, 1040.03, 480.542, 1040.03, 485.192, 1036.21, 488.846, 1034.05, 492.832, 1033.88, 539.446, 1043.18, 558.878, 1054.81, 574.251, 1058.79, 587.372, 1070.07, 598.355, 1070.86, 603.362, 1078.51, 609.906, 1082.66, 622.415, 1087.82, 636.217, 1087.35, 655.802, 1074.21, 669.556, 1069.78, 682.223, 1058.19, 694.921, 1050.64, 694.921, 1041.44, 699.337, 1032.33, 708.94, 1030.65, 713.323, 1022.73, 721.052, 1017.58, 727.309, 964.766, 727.861, 961.821, 721.604, 958.325, 719.212, 954.828, 719.028, 950.595, 713.691, 946.263, 712.472, 941.21, 707.25, 931.457, 707.066, 922.808, 703.938, 907.349, 703.202, 894.468, 697.497, 865.024, 696.945, 856.884, 703.57, 846.947, 703.938, 844.923, 700.994, 831.489, 697.681, 630.371, 697.129, 616.017, 703.754, 570.195, 703.938, 564.348, 706.882, 499.939, 707.066, 491.106, 704.49, 475.096, 703.754, 469.391, 698.049, 461.11, 697.865, 457.061, 694.737, 450.805, 694.553, 445.284, 692.896, 443.812, 690.136, 423.757, 679.831, 333.619, 679.279, 329.018, 682.591, 257.279, 682.591, 248.997, 685.351, 243.293, 686.271, 239.796, 688.48, 68.4105, 688.48, 62.8897, 691.976, 6.72339, 691.792, 1.75467, 689.032, -4.68622, 689.032, -10.575, 683.327, -26.0332, 682.591, -29.5796, 680.015, -40.7552, 679.463, -43.6996, 677.99, -48.8524, 677.254, -52.3488, 674.31, -58.9738, 673.758, -64.9156, 667.593, -168.22, 666.949, -177.053, 670.813, -186.807, 670.813, -193.8, 673.574, -198.4, 673.942, -206.865, 679.463, -212.754, 684.615, -221.219, 688.296, -225.268, 688.664, -232.261, 694.369, -235.021, 699.153, -235.573, 703.938, -250.809, 703.386, -255.594, 706.882, -421.229, 706.882, -425.829, 703.754, -480.669, 703.754, -488.624, 698.233, -614.226, 697.497, -617.404, 694.921, -625.869, 694.553, -628.63, 692.16, -635.439, 691.608, -640.591, 690.688, -646.48, 689.032, -651.081, 683.695, -655.774, 682.779, -659.022, 679.648, -664.937, 679.88, -674.911, 669.905, -683.934, 652.115, -688.086, 646.8, -689.747, 635.507, -691.906, 627.867, -692.072, 617.072, -701.705, 607.107, -707.85, 603.951, -718.646, 593.654, -727.116, 592.491, -731.497, 589.77, -736.749, 589.668, -749.205, 577.765, -758.007, 575.44, -770.877, 561.489, -784.083, 544.715, -786.681, 539.957, -792.054, 535.248, -796.786, 527.182, -797.617, 523.528, -799.609, 520.705, -801.769, 518.38, -803.097, 512.235, -805.921, 507.916, -809.076, 503.764, -810.737, 495.294, -812.564, 490.478, -828.01, 474.534, -840.916, 458.025, -847.061, 457.527, -855.366, 452.711, -862.341, 445.237, -872.14, 440.42, -882.105, 428.961, -892.9, 425.307, -898.215, 423.148, -904.36, 417.335, -917.979, 409.363, -935.75, 397.571, -943.556, 395.578, -952.934, 391.227, -988.144, 392.223, -990.314, 388.077, -994.953, 383.089, -994.953, 341.734, -989.306, 330.059, -988.808, 303.817, -996.614, 293.592, -1005.58, 290.769, -1021.03, 279.641, -1041.62, 273.164, -1048.76, 266.189, -1066.56, 260.376, -1110.4, 259.047, -1118.44, 256.251, -1154.65, 257.082, -1164.28, 246.453, -1165.61, 235.989, -1171.75, 226.855, -1184.21, 215.063, -1192.35, 211.907, -1198.82, 213.402, -1211.11, 225.36, -1213.2, 232.291, -1213.11, 238.813, -1217.37, 243.429, -1219.46, 248.301, -1227.32, 256.953, -1230.71, 265.565, -1231.8, 272.625, -1236.68, 281.774, -1237.87, 287.541, -1244.63, 303.253, -1248.01, 307.529, -1250, 313.694, -1257.56, 322.847, -1258.45, 338.36, -1261.24, 342.835, -1261.83, 353.873, -1264.12, 361.547, -1264.42, 367.911, -1270.78, 376.861, -1274.26, 385.91, -1278.37, 394.168, -1279.16, 406.697, -1287.91, 417.138, -1288.71, 435.535, -1291.09, 442.258, -1291.29, 448.921, -1293.58, 454.29, -1298.65, 459.76, -1303.03, 470.002, -1308.5, 484.183, -1314.76, 490.647, -1320.43, 493.531, -1339.52, 497.309, -1349.47, 506.657, -1351.45, 512.524, -1354.33, 516.847, -1354.73, 523.311, -1360.89, 531.863, -1363.08, 538.724, -1378.19, 553.938, -1383.27, 556.325, -1389.53, 556.424, -1392.61, 557.817, -1395.3, 559.507, -1401.36, 559.408, -1407.83, 565.175, -1415.88, 565.871, -1420.01, 569.041, -1426.31, 571.739, -1431.64, 573.416, -1444.33, 583.155, -1455.59, 594.704, -1461.8, 596.239, -1468.97, 602.745, -1474.38, 605.596, -1479.93, 610.932, -1486, 610.859, -1523.48, 610.975, -1532.45, 618.095, -1536.58, 634.328, -1537.72, 652.697, -1540.85, 661.314, -1541.85, 669.145, -1543.7, 685.948, -1557.94, 701.042, -1564.63, 700.615, -1570.04, 703.747, -1573.89, 704.781, -1585.42, 715.603, -1596.74, 715.894, -1603.08, 718.878, -1886.31, 718.788, -1899.96, 715.707, -1934.29, 713.946, -1971.26, 723.189, -2116.5, 722.309, -2145.23, 718.244, -2162.26, 706.324, -2183.37, 704.621, -2187.12, 699.172, -2188.83, 654.978, -2188.83, 612.715, -2192.98, 602.526, -2187.01, 551.55, -2192, 522.424, -2188.4, 511.697, -2189.79, 500.324, -2184.24, 462.045, -2184.79, 435.138, -2190.06, 399.157, -2193.95, 366.148, -2194.5, 348.395, -2191.17, 332.861, -2186.49, 326.244, -2168.89, 315.066, -2153.19, 302.937, -2149.15, 298.419, -2143.44, 296.992, -2121.56, 279.392, -2115.4, 272.558, -2104.17, 263.286, -2090.01, 254.34, -2067.52, 236.352, -2045.75, 221.521, -2040.23, 216.472, -2032.18, 210.319, -2021.92, 198.801, -1994.63, 177.343, -1971.91, 167.245 )
disabled = true

[node name="Level2" type="CollisionPolygon2D" parent="LevelGenerator/Level"]
visible = false
position = Vector2( 300, 0 )
build_mode = 1
polygon = PoolVector2Array( -1920.37, 101.786, -1807.57, 111.595, -1787.95, 28.2233, -1611.4, -15.9145, -1371.1, 101.786, -1248.49, 72.3611, -1174.93, -1.2019, -1160.2, -68.7522, -1095.62, -83.1021, -1090.84, -205.077, -1057.35, -327.051, -942.556, -353.359, -892.331, -482.509, -744.013, -526.977, -723.464, -592.048, -661.818, -605.747, -651.543, -705.066, -559.074, -729.039, -473.455, -759.862, -398.109, -746.163, -350.162, -794.11, -226.87, -804.385, 33.4138, -818.084, 166.98, -742.739, 194.379, -670.818, 355.344, -609.172, 450.766, -600.317, 471.271, -499.84, 536.889, -464.981, 549.192, -395.262, 594.304, -335.797, 586.102, -249.674, 686.896, -137.987, 883.263, -105.259, 958.789, -24.6979, 1031.8, -17.1453, 1077.11, 40.7579, 1155.16, 45.7931, 1199.37, 250.37, 1469.68, 393.472, 1535.93, 512.723, 1578.33, 552.474, 1575.68, 788.327, 1599.53, 830.728, 1562.43, 862.528, 1437.88, 889.028, 1053.62, 894.328, 947.619, 862.528, 544.814, 854.578, 523.613, 692.926, 388.462, 502.123, 389.482, 404.444, 375.418, 330.605, 378.934, 247.975, 306.852, 105.57, 317.401, 56.3431, 224.42, -16.6182, 226.812, -59.668, 169.412, -126.634, 174.195, -193.601, 157.454, -251, 162.237, -298.834, 114.404, -353.842, 116.796, -425.591, 73.7458, -456.683, 80.9208, -506.908, -2.78717, -571.482, -109.747, -509.299, -169.538, -461.466, -207.805, -466.249, -258.03, -351.45, -370.437, -200.776, -705.269, -179.251, -760.277, -136.201, -767.452, -71.6262, -815.285, -54.8846, -882.252, 98.1813, -942.043, 201.023, -931.091, 284.731, -990.882, 354.089, -1320.93, 380.397, -1399.86, 519.113, -1438.12, 607.604, -1507.48, 679.354, -1514.65, 777.412, -1550.53, 839.595, -1906.89, 856.336, -2145.2, 819.816, -2199.86, 714.697, -2195.66, 525.484, -2199.86, 281.609, -2153.61, 163.876 )
disabled = true

[node name="Level3" type="CollisionPolygon2D" parent="LevelGenerator/Level"]
visible = false
position = Vector2( 150, 0 )
build_mode = 1
polygon = PoolVector2Array( -1932.39, 442.698, -1912.51, 435.521, -1905.15, 429.08, -1894.85, 413.806, -1887.67, 408.286, -1875.52, 406.077, -1862.27, 396.876, -1849.95, 394.3, -1753.35, 394.3, -1736.97, 386.492, -1729.97, 375.818, -1726.29, 362.016, -1660.48, 361.464, -1643.55, 351.895, -1622.39, 331.284, -1618.53, 311.12, -1612.58, 299.793, -1595.78, 277.823, -1583.56, 277.443, -1578.78, 273.211, -1552.28, 262.905, -1525.99, 210.02, -1467.82, 150.18, -1470.12, 68.6398, -1482.31, 1.04982, -1473.58, -45.3161, -1468.32, -75.8424, -1463.05, -97.9476, -1429.37, -145.316, -1415.81, -187.265, -1392.53, -221.105, -1344.11, -282.158, -1327.26, -343.155, -1329.37, -366.313, -1292.53, -436.839, -1266.21, -490.524, -1203.05, -545.26, -1171.9, -547.179, -1142.45, -577.579, -1053.15, -632.679, -1032.25, -674.479, -952.451, -752.379, -923.951, -772.329, -900.201, -804.629, -875.501, -807.479, -856.501, -796.079, -730.346, -797.979, -717.996, -804.629, -524.196, -800.829, -510.896, -770.429, -484.296, -752.379, -455.134, -753.443, -396.896, -675.429, -340.846, -648.829, -287.646, -614.629, -235.396, -560.479, -243.946, -498.873, -253.446, -483.673, -255.346, -395.323, -200.246, -317.423, -198.346, -182.465, -170.796, -113.115, -90.8952, -24.3201, -25.6321, 12.522, -16.1584, 77.7852, -28.79, 143.048, -24.926, 216.571, 23.8416, 291.449, 95.4205, 335.659, 95.4205, 398.817, 109.105, 431.449, 110.157, 524.198, 123.841, 539.987, 144.894, 553.672, 199.631, 555.777, 237.526, 592.619, 263.841, 637.882, 281.736, 655.777, 318.578, 656.829, 352.637, 634.724, 392.637, 597.882, 405.268, 579.987, 414.742, 557.882, 430.532, 544.198, 475.795, 514.724, 515.795, 495.777, 552.637, 468.409, 566.321, 417.882, 590.614, 382.093, 622.193, 371.566, 641.14, 358.935, 661.14, 361.04, 682.193, 349.461, 695.877, 350.514, 714.824, 337.882, 799.035, 338.935, 959.035, 338.935, 1037.98, 372.619, 1053.77, 358.935, 1051.67, 327.356, 1077.95, 297.68, 1081.72, 273.924, 1092.2, 249.23, 1107.4, 228.33, 1110.25, 194.13, 1112.15, 101.98, 1121.65, 91.5298, 1137.8, 87.7298, 1152.44, 76.3532, 1171.05, 73.4798, 1182.38, 60.8688, 1202.47, 55.0792, 1214.05, 44.1813, 1245.04, 43.1596, 1267.86, 53.3764, 1287.95, 57.8037, 1304.98, 70.4045, 1315.88, 72.1073, 1329.5, 83.0052, 1338.01, 95.9466, 1357.43, 117.402, 1362.53, 130.684, 1372.75, 138.517, 1379.56, 153.161, 1390.46, 161.675, 1395.88, 174.341, 1416.31, 187.283, 1422.44, 204.311, 1435.38, 222.02, 1437.08, 236.664, 1448.66, 251.308, 1457.18, 270.38, 1480.34, 294.9, 1489.87, 296.262, 1504.86, 303.074, 1515.41, 304.095, 1522.56, 309.204, 1529.38, 311.247, 1539.59, 313.972, 1553.92, 328.647, 1560.09, 342.731, 1574.07, 354.362, 1586.93, 371.779, 1606.74, 383.223, 1618.18, 376.621, 1628.75, 376.621, 1644.59, 380.582, 1653.39, 388.064, 1666.6, 390.705, 1682.44, 402.148, 1697.84, 414.912, 1702.59, 432.304, 1715.45, 452.763, 1720.73, 467.727, 1726.89, 478.29, 1731.06, 495.95, 1747.58, 523.623, 1748.02, 536.911, 1755.94, 552.756, 1756.38, 567.72, 1759.9, 573.442, 1763.42, 591.487, 1769.15, 601.17, 1774.87, 625.377, 1773.99, 642.982, 1778.39, 654.425, 1777.51, 677.312, 1781.91, 684.354, 1780.15, 690.516, 1784.11, 701.079, 1784.11, 841.468, 1780.59, 854.231, 1773.99, 867.435, 1775.31, 883.72, 1768.71, 896.484, 1761.66, 907.927, 1755.94, 920.69, 1725.13, 940.496, 1703.68, 942.281, 1409.32, 947.838, 1355.3, 957.66, 1330.74, 977.303, 1264.45, 980.987, 1178.51, 982.214, 1103.61, 957.66, 1054.5, 953.976, 1013.99, 940.471, 958.741, 935.56, 918.225, 893.817, 789.313, 892.59, 747.57, 874.174, 726.461, 863.013, 691.094, 861.896, 656.821, 861.466, 643.667, 869.204, 625.87, 869.204, 601.109, 897.834, 589.502, 919.499, 579.443, 933.427, 535.337, 930.332, 513.671, 921.821, 414.627, 921.047, 392.471, 940.391, 375.448, 941.939, 366.163, 951.998, 339.854, 958.188, 311.998, 967.474, 292.653, 982.949, 83.7326, 982.176, 45.0436, 986.818, 36.3697, 996.877, 11.6087, 997.651, -55.7101, 1013.9, -71.1858, 1025.51, -97.4943, 1030.15, -122.255, 1027.05, -129.993, 1020.86, -154.754, 1018.54, -176.42, 1015.45, -205.824, 994.556, -226.716, 994.556, -240.644, 979.854, -256.119, 958.962, -273.386, 938.572, -292.752, 916.125, -310.357, 894.559, -317.399, 865.07, -316.959, 846.145, -319.792, 829.949, -315.81, 820.849, -319.223, 806.629, -339.7, 783.308, -347.094, 769.088, -357.902, 752.024, -359.039, 726.997, -368.709, 702.538, -370.415, 672.392, -374.456, 664.986, -372.919, 659.453, -375.992, 653.306, -377.222, 644.7, -382.36, 639.97, -381.791, 624.613, -389.754, 612.099, -397.815, 602.592, -401.81, 587.532, -421.436, 555.035, -432.379, 539.186, -436.153, 515.79, -446.052, 499.535, -445.964, 488.243, -450.492, 474.659, -457.285, 456.546, -467.473, 412.395, -466.133, 337.52, -473.303, 324.615, -472.228, 313.143, -479.584, 282.444, -487.643, 275.144, -486.926, 264.748, -494.454, 245.031, -504.85, 226.39, -505.567, 212.409, -509.152, 206.673, -508.786, 144.024, -511.414, 136.724, -511.998, 119.497, -518.421, 113.365, -520.465, 101.394, -520.634, 91.9909, -522.853, 83.1144, -524.517, 72.5736, -531.729, 62.865, -536.168, 44.8347, -538.387, 37.0678, -538.109, 27.0817, -541.715, 22.3661, -542.125, 14.3418, -551.18, -4.89633, -561.77, -16.2639, -571.134, -36.9227, -580.79, -47.9627, -586.154, -63.0806, -587.129, -80.1493, -592.982, -86.9767, -592.494, -99.1686, -596.883, -102.582, -594.445, -111.848, -602.247, -122.089, -600.784, -135.744, -608.099, -142.572, -614.927, -172.32, -638.335, -196.216, -640.774, -205.969, -661.256, -224.48, -673.936, -243.5, -688.078, -257.642, -692.955, -273.248, -691.492, -289.341, -699.295, -300.07, -705.634, -323.478, -731.969, -334.207, -757.816, -334.695, -770.538, -343.046, -801.719, -351.007, -854.129, -351.671, -864.062, -349.031, -870.714, -343.046, -890.617, -331.105, -898.486, -305.386, -906.17, -298.01, -908.629, -288.174, -916.928, -272.499, -922.767, -258.361, -927.876, -250.922, -928.557, -241.386, -937.412, -228.785, -941.158, -220.612, -948.65, -211.417, -951.375, -203.243, -955.802, -193.026, -967.381, -179.063, -973.574, -165.426, -986.747, -155.547, -988.684, -145.861, -1002.82, -126.878, -1005.34, -116.611, -1014.47, -106.089, -1024.56, -76.0398, -1023.91, -64.0201, -1030.35, -53.5028, -1029.92, -47.7075, -1036.58, -22.7143, -1038.94, -9.40666, -1044.3, -3.82606, -1048.38, 10.3401, -1048.17, 27.0819, -1051.6, 40.8188, -1074.57, 91.9487, -1078, 106.973, -1078.22, 132.301, -1084.66, 156.618, -1090.02, 168.209, -1103.97, 181.516, -1114.06, 198.867, -1114.28, 208.311, -1120.07, 220.546, -1123.29, 231.492, -1131.23, 238.79, -1131.66, 245.658, -1138.1, 251.883, -1138.1, 263.688, -1141.32, 273.122, -1141.32, 278.74, -1146.94, 289.981, -1146.94, 298.504, -1149.65, 310.902, -1152.95, 315.551, -1152.95, 340.898, -1156.24, 344.965, -1155.85, 350.196, -1161.28, 355.426, -1164.96, 363.368, -1165.93, 373.054, -1169.02, 380.197, -1176, 387.558, -1178.13, 400.731, -1182.78, 407.123, -1183.55, 414.484, -1191.11, 430.368, -1195.76, 437.782, -1198.47, 446.693, -1212.8, 467.613, -1216.87, 482.529, -1224.81, 494.539, -1233.53, 499.188, -1244.57, 510.036, -1259.68, 517.591, -1281.02, 535.001, -1287.61, 542.362, -1291.1, 550.886, -1297.1, 557.278, -1297.68, 563.671, -1300.4, 567.351, -1300.78, 574.325, -1303.3, 580.33, -1302.72, 590.015, -1306.21, 594.664, -1306.21, 601.832, -1323.45, 619.817, -1325.97, 624.466, -1333.13, 632.021, -1333.33, 638.414, -1373.26, 679.09, -1381.35, 682.326, -1386.85, 689.443, -1387.5, 695.591, -1399.07, 710.47, -1425.22, 736.621, -1435.87, 736.427, -1447.49, 743.401, -1452.92, 749.6, -1453.5, 755.217, -1458.39, 761.703, -1468.47, 785.143, -1475.63, 791.922, -1477.96, 800.639, -1481.45, 804.707, -1482.8, 808.775, -1494.81, 814.393, -1503.92, 814.974, -1516.31, 818.848, -1521.35, 823.497, -1527.55, 826.984, -1537.82, 827.178, -1544.79, 832.795, -1661.01, 832.408, -1668.57, 838.607, -1756.32, 838.607, -1761.93, 841.9, -1944.35, 844.224, -2107.76, 847.273, -2156.31, 832.571, -2175.45, 817.592, -2176.83, 806.774, -2187.37, 781.809, -2189.32, 772.1, -2187.82, 763.208, -2185.43, 750.986, -2186.18, 728.811, -2188.21, 719.641, -2189.52, 668.198, -2190.7, 664.155, -2190.89, 582.795, -2194.94, 567.888, -2193.29, 552.246, -2192, 538.891, -2189.24, 531.53, -2187.21, 511.839, -2187.76, 499.878, -2187.21, 490.492, -2188.87, 476.875, -2175.07, 473.746, -2156.66, 473.746, -2149.85, 471.354, -2096.3, 463.809, -2035.76, 455.712, -2004.16, 446.195, -1991.83, 445.091, -1976.19, 442.514 )
disabled = true

[node name="Level4" type="CollisionPolygon2D" parent="LevelGenerator/Level"]
visible = false
position = Vector2( 300, 0 )
build_mode = 1
polygon = PoolVector2Array( -1908.18, -717.324, -1807.13, -740.586, -1745.18, -838.67, -1470.82, -863.885, -946.994, -889.913, -693.217, -932.209, -628.146, -880.152, -442.694, -883.406, -322.313, -824.842, -162.889, -837.856, 16.0562, -857.378, 172.226, -818.335, 284.628, -821.589, 426.003, -730.489, 701.082, -701.207, 691.321, -577.572, 831.224, -522.262, 932.083, -421.402, 1071.99, -405.134, 1036.2, -310.782, 1130.55, -196.907, 1143.56, 43.8551, 1169.59, 154.476, 1133.8, 252.082, 1192.37, 590.451, 1117.54, 671.79, 1172.85, 766.143, 1296.48, 834.467, 1229.47, 909.657, 386.97, 961.029, 212.306, 858.285, 71.8899, 875.409, 13.6685, 776.09, -164.42, 889.108, -366.483, 889.108, -561.696, 755.541, -767.183, 800.064, -921.298, 817.188, -982.944, 762.391, -1092.54, 758.966, -1116.51, 680.196, -1078.84, 591.152, -1082.26, 467.859, -1239.8, 351.417, -1232.95, 231.549, -1339.12, 67.1593, -1253.5, -97.2305, -1116.51, -319.842, -1020.62, -323.266, -928.148, -408.886, -613.067, -429.435, -274.014, -436.284, -61.6768, -330.116, -20.5793, -199.974, -95.9247, -117.779, -571.97, -93.8057, -637.041, -4.76123, -599.368, 166.478, -325.385, 306.894, -222.642, 279.496, -133.597, 303.47, 23.9429, 413.063, 263.678, 419.912, 380.121, 536.355, 458.891, 550.054, 527.386, 529.505, 506.838, 447.311, 544.51, 371.965, 565.059, 159.629, 452.041, 101.407, 410.944, -52.7083, 130.111, -244.496, 130.111, -436.284, 71.8899, -535.603, -150.721, -542.453, -376.757, -617.798, -777.457, -545.878, -791.156, -600.674, -924.723, -539.028, -1013.77, -614.373, -1544.61, -539.028, -1530.91, -213.673, -1589.13, 108.257, -1552.19, 841.404, -2198.93, 841.404, -2303.58, 850.481, -2328.1, 693.547, -2290.29, 603.46, -2303.17, 378.355, -2326.99, 251.718, -2329.39, 48.4271, -2315.04, -107.03, -2324.6, -295.971, -2271.99, -611.67, -2153.19, -753.935 )
disabled = true

[node name="EventLabel" type="Label" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 14.0
size_flags_horizontal = 4
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_as_outline = 1
text = "GG EASY"
uppercase = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="PauseScreen" parent="CanvasLayer" instance=ExtResource( 8 )]
pause_mode = 2
visible = false
[connection signal="fuel_update" from="Ship" to="Ship/Camera2D/CanvasLayer/Control/FuelBar" method="_on_Ship_fuel_update"]
[connection signal="game_over" from="Ship" to="LevelGenerator/Level" method="_on_Ship_game_over"]
[connection signal="level_completed" from="Ship" to="LevelGenerator/Level" method="_on_Ship_level_completed"]
